# VibeCoding_oj

./: .gitignore  CMakeLists.txt  Makefile  README.md  SPEC.md  err.md  interview.md  vibeoj
deploy/: README.md  config.example.env  install-https.sh  install.sh  nginx-vibeoj-ssl.conf.template  nginx-vibeoj.conf.template  start.sh  update-prod.sh  vibeoj.service  vibeoj.system.service  运维手册.md
deploy/ssl/: README.txt
server/: config.hpp  main.cpp
server/db/: migrate_phase13.sql  migrate_phase27.sql  migrate_phase30.sql  migrate_phase31.sql  migrate_phase34.sql  pool.cpp  pool.hpp  schema.sql  seed.sql
server/handler/: admin.cpp  announcement.cpp  auth.cpp  avatar.cpp  background.cpp  comment.cpp  discussion.cpp  icon.cpp  leaderboard.cpp  message.cpp  problem.cpp  proposal.cpp  submission.cpp  user.cpp
server/judge/: compiler.cpp  compiler.hpp  engine.cpp  engine.hpp  runner.cpp  runner.hpp  threadpool.cpp  threadpool.hpp
server/middleware/: auth.cpp  auth.hpp
server/util/: config_loader.hpp  crypto.cpp  crypto.hpp  json_extract.hpp  logger.hpp  tmpfile.cpp  tmpfile.hpp
web/: index.html
web/backgrounds/: README.txt
web/css/: style.css  style_v2.css
web/icons/: README.txt
web/js/: api.js  effects.js  router.js  utils.js
web/js/pages/: admin.js  adminAnnouncements.js  adminProposalReview.js  adminQuestionEdit.js  adminQuestions.js  adminUsers.js  announcements.js  discussionDetail.js  discussions.js  leaderboard.js  login.js  messages.js  problemComments.js  problemDetail.js  problems.js  proposalList.js  proposalSubmit.js  register.js  result.js  userCenter.js  userProfile.js
